Remove trecho que criptografava senha e gravava no banco. Isso nao eh mais utilizado hoje em dia